# pycel2sql

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/skills/add-cel-feature/: SKILL.md
.claude/skills/add-cel-feature/references/: converter-file-map.md
.claude/skills/add-sql-dialect/: SKILL.md
.claude/skills/add-sql-dialect/references/: dialect-method-checklist.md  test-files.md
.claude/skills/add-sql-dialect/scripts/: scaffold_dialect.py
.claude/skills/port-from-upstream/: SKILL.md
.claude/skills/port-from-upstream/references/: go-to-python-idioms.md  java-to-python-cross-refs.md
.claude/skills/port-from-upstream/scripts/: list_upstream_changes.sh
.claude/skills/release-pycel2sql/: SKILL.md
.claude/skills/release-pycel2sql/scripts/: release_preflight.sh
.github/workflows/: ci.yml  release.yml
src/pycel2sql/: __init__.py  _analysis.py  _analysis_types.py  _comprehensions.py  _constants.py  _converter.py  _errors.py  _json.py  _operators.py  _timestamps.py  _utils.py  schema.py
src/pycel2sql/dialect/: __init__.py  _base.py  bigquery.py  duckdb.py  mysql.py  postgres.py  spark.py  sqlite.py
src/pycel2sql/introspect/: __init__.py  bigquery.py  duckdb.py  mysql.py  postgres.py  sqlite.py
tests/: conftest.py  test_analysis.py  test_bigquery.py  test_comprehensions.py  test_convert.py  test_dialect_parametrized.py  test_duckdb.py  test_error_classes.py  test_errors.py  test_introspect.py  test_invalid_arguments.py  test_json.py  test_mysql.py  test_options.py  test_parameterized.py  test_schema.py  test_spark.py  test_sqlite.py  test_string_functions.py  test_timestamps.py  test_utils.py  test_validate_schema.py
tests/integration/: conftest.py  test_arithmetic.py  test_arrays.py  test_basic_ops.py  test_in_operator.py  test_introspect.py  test_json.py  test_logical_ops.py  test_parameterized.py  test_regex.py  test_string_funcs.py  test_ternary.py  test_timestamps.py  test_type_cast.py
