[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pycel2sql"
version = "0.1.0"
description = "Convert CEL (Common Expression Language) expressions to SQL WHERE clauses"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "cel-python>=0.4.0",
    "lark>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4.0",
    "mypy>=1.10",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pycel2sql"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.mypy]
python_version = "3.12"
strict = true
