[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pycel2sql"
version = "0.1.0"
description = "Convert CEL (Common Expression Language) expressions to SQL WHERE clauses"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "cel-python>=0.4.0",
    "lark>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4.0",
    "mypy>=1.10",
]
integration = [
    "testcontainers[postgres]>=4.0",
    "testcontainers[mysql]>=4.0",
    "psycopg[binary]>=3.1",
    "mysql-connector-python>=9.0",
    "duckdb>=1.0",
    "pytz>=2024.1",
    "google-cloud-bigquery>=3.20",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pycel2sql"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: Integration tests against real databases",
    "docker: Tests requiring Docker (PostgreSQL, MySQL)",
    "postgres: PostgreSQL-specific tests",
    "mysql: MySQL-specific tests",
    "duckdb: DuckDB-specific tests",
    "sqlite: SQLite-specific tests",
    "bigquery: BigQuery-specific tests",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.mypy]
python_version = "3.12"
strict = true
