[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "pycel2sql"
dynamic = ["version"]
description = "Convert CEL (Common Expression Language) expressions to SQL WHERE clauses"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "cel-python>=0.4.0",
    "lark>=1.1.0",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/pycel2sql/_version.py"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4.0",
    "mypy>=1.10",
]
integration = [
    "testcontainers[postgres]>=4.0",
    "testcontainers[mysql]>=4.0",
    "psycopg[binary]>=3.1",
    "mysql-connector-python>=9.0",
    "duckdb>=1.0",
    "pytz>=2024.1",
    "google-cloud-bigquery>=3.20",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pycel2sql"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: Integration tests against real databases",
    "docker: Tests requiring Docker (PostgreSQL, MySQL)",
    "postgres: PostgreSQL-specific tests",
    "mysql: MySQL-specific tests",
    "duckdb: DuckDB-specific tests",
    "sqlite: SQLite-specific tests",
    "bigquery: BigQuery-specific tests",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.mypy]
python_version = "3.12"
strict = true
